# reiki-rag-converter

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
docs/: AI_Development_Standard_v1.0.md  AI_OSS_Practices_v1.0.md  ChatGPT_Startup_Template_v1.0.md  ChatGPT_Startup_Workflow_v1.0.md  Design_Master.md  Design_Note_Article_Paragraph_Extraction.md  Design_Note_Question_Instantiation.md  Design_convert_v2.6.md  Design_exception_check_v3.1.md  Design_exception_check_v3.2.md  Design_interface_customized_question_set_delivery.md  Design_synthetic_generator_v0.2.md  Design_synthetic_html_v0.1.md  Design_synthetic_html_v0.2.md  GOLDEN_POLICY_v1.0.md  PROJECT_GRAND_RULES.md  PROJECT_STATUS.md  Qommons_Evaluation_Framework_v0.1.md  Qommons_Test_Artifact_Interface_v0.1r.md  Qommons_test_manual_v0.1.md  README_Evaluation.md  README_observation.md  Roadmap_v1.0.md  Roadmap_v1.1.md  Roadmap_v1.2.md  Roadmap_v1.3.md  requirements.md  test_e2e_design.md  test_plan.md
logs_v3_1_test/: class_statistics.json  structure_summary.json  summary_report.json
reiki_honbun/: k518RG00000012.html  k518RG00000055.html  k518RG00000080.html
scripts/: bundle_pack.py  compare_answers.py  eval_summarize.py  render_annex.py  run_user_test.py
src/: convert_reiki_v2.7.py  synthetic_generator_v0.1.py  synthetic_generator_v0.2.py  validate_reiki_structure_v0.5.2.py  validate_reiki_structure_v0.5.3.py
synthetic_html/: synRG00000001_P1_basic.html  synRG00000002_P2_items.html  synRG00000003_P3_table.html  synRG00000004_P4_multi_supplement.html  (+10 more)
(+125 files in other folders)
