[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reiki-rag-converter"
version = "0.0.0"
description = "Generate deterministic customized question sets from ordinance HTML"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.12",
    "chardet>=5.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
